add more documentation

--- a/README.org
+++ b/README.org
@@ -7,13 +7,17 @@
   This package lets you automatically apply AI-generated changes as you code. Call M-x =elysium-query=
   and request a set of changes, and they will be applied to your code buffer as a merge.
 
-* Installation
+* Installation and Customization
 
 #+BEGIN_SRC emacs-lisp :results none
 (use-package elysium
   :straight
   ;; TODO bind-key
-  (:host github :repo "lanceberge/elysium" :branch "main" :files ("*.el")))
+  (:host github :repo "lanceberge/elysium" :branch "main" :files ("*.el"))
+  :custom
+  ;; Below are the default values
+  (elysium-window-size 0.33) ; The elysium buffer will be 1/3 your screen
+  (elysium-window-style 'vertical)) ; Can be customized to horizontal
 
 (use-package gptel
   :custom
@@ -40,18 +44,22 @@ Use =smerge-mode= to then merge in the changes
   :hook (prog-mode . smerge-mode))
 #+END_SRC
 
-Important functions:
+** Functions to know:
 
-| =smerge-next=       | go to the next conflicting hunk        |
-| =smerge-keep-other= | keep the changes from =elysium=    |
-| =smerge-keep-mine=  | discard the changes from =elysium= |
+| =elysium-keep-all-suggested-changes=    | keep all of the AI-suggested changes    |
+| =elysium-discard-all-suggested-changes= | discard all of the AI-suggested changes |
+| =smerge-next=                           | go to the next conflicting hunk         |
+| =smerge-keep-other=                     | keep this set of changes                |
+| =smerge-keep-mine=                      | discard this set of changes             |
+| =elysium-toggle-window=                 | toggle the chat window            |
 
 * Notes
 
   =elysium= uses [[https://github.com/karthink/gptel][gptel]] as a backend. It supports any of the models supported by =gptel=, but currently
   Claude 3-5 Sonnet seems to be the best for generating code.
 
+  If there is a region active, then =elysium= will send only that region to the LLM. Otherwise, the entire code buffer will be sent. If you're using =Claude=, then I recommend only ever sending a region to avoid getting rate-limited.
+
 * Planned Features
 
-- Function to implement pseudocode
 - Implementing [[https://docs.anthropic.com/en/docs/build-with-claude/prompt-caching][Prompt Caching]] with Anthropic to let us send more queries before getting rate-limited
