--- a/README.org
+++ b/README.org
@@ -4,6 +4,8 @@
 
 * elysium
 
+#+html: <p align="center"><img src="image/minotaur.png" width=300px /></p>
+
   This package lets you automatically apply AI-generated changes as you code. Call M-x =elysium-query=
   and request a set of changes, and they will be applied to your code buffer as a merge.
 
