--- a/README.org
+++ b/README.org
@@ -1,23 +1,39 @@
+#+BEGIN_HTML
 <p align="center">
   <img src="https://img.shields.io/badge/license-GPL_3-green.svg" />
   <img src="https://img.shields.io/badge/Supports-Emacs_27.1–29.4-blueviolet.svg?style=flat-square&logo=GNU%20Emacs&logoColor=white" />
   <img src="https://github.com/lanceberge/elysium/actions/workflows/ci.yml/badge.svg" />
 </p>
+#+END_HTML
 
-# elysium
+* elysium
 
-<p align="center"><img src="image/minotaur.png" width=300px /></p>
+#+HTML: <p align="center"><img src="image/minotaur.png" width=300px /></p>
 
   This package lets you automatically apply AI-generated changes as you code. Call M-x =elysium-query=
   and request a set of changes, and they will be applied to your code buffer as a merge.
 
-## Installation and Customization
+* Installation
 
-```emacs-lisp
+***** Using =straight.el=
+
+#+BEGIN_SRC emacs-lisp :results none
 (use-package elysium
   :straight
-  ;; TODO bind-key
   (:host github :repo "lanceberge/elysium" :branch "main" :files ("*.el"))
+#+END_SRC
+
+***** Using =elpaca=
+
+#+BEGIN_SRC emacs-lisp :results none
+(use-package elysium
+  :ensure (:host github :repo "lanceberge/elysium"))
+#+END_SRC
+
+* Customization
+
+#+BEGIN_SRC emacs-lisp :results none
+(use-package elysium
   :custom
   ;; Below are the default values
   (elysium-window-size 0.33) ; The elysium buffer will be 1/3 your screen
@@ -38,23 +54,22 @@
    gptel-backend (gptel-make-anthropic "Claude"
                    :stream t
                    :key #'gptel-api-key)))
-```
 
 Use =smerge-mode= to then merge in the changes
 
-```emacs-lisp
+,#+BEGIN_SRC emacs-lisp :results none
 (use-package smerge-mode
   :ensure nil
   :hook
   (prog-mode . smerge-mode))
-```
+#+END_SRC
 
-** Functions to know:
+* Usage
 
 | =elysium-keep-all-suggested-changes=    | keep all of the AI-suggested changes    |
 | =elysium-discard-all-suggested-changes= | discard all of the AI-suggested changes |
-| =smerge-next=                           | go to the next conflicting hunk         |
 | =smerge-keep-other=                     | keep this set of changes                |
+| =smerge-next=                           | go to the next conflicting hunk         |
 | =smerge-keep-mine=                      | discard this set of changes             |
 | =elysium-toggle-window=                 | toggle the chat window                  |
 
